--- a/CSS.css
+++ b/CSS.css
@@ -1,9 +1,15 @@
 #Logo {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -190%);
+    text-align: center;
 }
-#Search Form {
+#SearchForm {
     display: block;
     text-align: center;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
