--- a/CSS.css
+++ b/CSS.css
@@ -13,3 +13,23 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+.nav a{
+    color: black;
+    text-decoration: none;
+    font-size: 14px;
+    font-family: arial,sans-serif;
+}
+
+#left {
+    margin-top: 13px;
+    margin-left:19px;
+    float: left;
+
+}
+
+#right {
+    margin-top: 12px;
+    margin-left: 25px;
+    float: right;
+}
