--- a/CSS.css
+++ b/CSS.css
@@ -10,8 +10,7 @@
     text-align: center;
     position: fixed;
     top: 45%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    left: 425px;
 }
 
 .round {
@@ -29,6 +28,14 @@
     font-family: arial,sans-serif;
 }
 
+.footer a{
+    color: rgb(107, 107, 107);
+    text-decoration: none;
+    font-size: 14px;
+    font-family: arial,sans-serif;
+    margin-bottom: 10px;
+    margin-right: 15px;
+}
 #left {
     margin-top: 13px;
     margin-left:19px;
@@ -40,4 +47,15 @@
     margin-top: 12px;
     margin-left: 25px;
     float: right;
+}
+
+.footer{
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgb(240, 240, 240);
+  color: white;
+  text-align: center;
+  margin-right: 50px;
 }
