--- a/CSS.css
+++ b/CSS.css
@@ -6,6 +6,7 @@
     text-align: center;
 }
 #SearchForm {
+    color: rgb(216, 216, 216);
     display: block;
     text-align: center;
     position: fixed;
@@ -15,12 +16,22 @@
 
 .round {
     border-color: rgb(216, 216, 216);
+    border-top-color: rgb(216, 216, 216);
     border-radius: 30px;
     border-width: thin;
     height: 40px;
     width: 570px;
 }
+button{
+    background-color: rgb(16, 112, 238);
+    text-decoration: none;
+    color: white;
+    border-radius: 5px;
+    float: right;
+    border: none;
+    padding: 10px 20px;
 
+}
 .nav a{
     color: black;
     text-decoration: none;
@@ -36,14 +47,14 @@
     margin-bottom: 10px;
     margin-right: 15px;
 }
-#left {
-    margin-top: 13px;
+.left {
+    margin-top: 12px;
     margin-left:19px;
     float: left;
 
 }
 
-#right {
+.right {
     margin-top: 12px;
     margin-left: 25px;
     float: right;
@@ -58,4 +69,24 @@
   color: white;
   text-align: center;
   margin-right: 50px;
+}
+
+button2 {
+    color:rgb(112, 111, 111);
+    font-family: arial,sans-serif;
+    font-size: 14px;
+    border: none;
+    margin: 25px;
+    padding: 10px;
+    width: 50%;
+    margin-left: 25%;
+    background-color: rgb(250, 250, 250);
+}
+
+button3 {
+    color:rgb(112, 111, 111);
+    font-family: arial,sans-serif;
+    font-size: 14px;
+    border: none;
+    background-color: rgb(250, 250, 250);
 }
